  Change it to $followingTimezones.
- [BUG FIX] A calculation which refers to other context as like 'product@unitprice' detected wrong record.
  Now any term in expressions having 'context@field' style refers to the 'relation' setting in the context definition.
  If there is no associated record, It corrects any 'context' in the page.

Ver.6 (November 21, 2020)
- All communications went async.
- Composer/npm based library management.
- The Service Server based-on node.js is introduced, and it uses on the server-side validation so far.
- The Service Server can reboot when the version in composer.json is different.
- Version number of major build is assigned as integer number.
- The script "dist-docs/build.sh" can call with parameter -a/-c/-d. Moreover it contains "deployment mode."
- The following methods are removed.
      INTERMediator_DBAdapter.server_access
      INTERMediator_DBAdapter.db_query
      INTERMediator_DBAdapter.db_queryWithAuth
      INTERMediator_DBAdapter.db_update
      INTERMediator_DBAdapter.db_updateWithAuth
      INTERMediator_DBAdapter.db_delete
      INTERMediator_DBAdapter.db_deleteWithAuth
      INTERMediator_DBAdapter.db_createRecord
      INTERMediator_DBAdapter.db_createRecordWithAuth
      INTERMediator_DBAdapter.db_copy
      INTERMediator_DBAdapter.db_copyWithAuth
- Deprecated global variables $g_dbInstance, $g_serverSideCall in INTER-Mediator.php are removed.
- Metadata.json is removed, composer.json takes over.
- Mail is going to send with swiftmailer.
- In the PDO connection string for MySQL uses host=localhost instead of unix_socket=.
- The method template "public function createInDB($bypassAuth)" is changed to "public function createInDB()" in
  DBClass_Interface. Some processes relevant to apply the privilege of record to an user was bypassed, but it requires
  to process them.
- After mailing with setting the 'send-mail' keyed value, if the 'store' keyed value has the context name,